packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@magic_spear.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/magic_spear.txt
---
Item {
    item_class: "Spears",
    rarity: Magic,
    name: Some(
        "Glinting Branched Spear of Success",
    ),
    base_type: None,
    item_level: Some(
        65,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            54,
        ),
        strength: Some(
            30,
        ),
        dexterity: Some(
            75,
        ),
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Physical Damage",
            value: "24-74 (augmented)",
        },
        Property {
            name: "Critical Hit Chance",
            value: "5.00%",
        },
        Property {
            name: "Attacks per Second",
            value: "1.55",
        },
        Property {
            name: "Grants Skill",
            value: "Spear Throw",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Glinting",
            ),
            tier: Some(
                9,
            ),
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "Adds 1(1-2) to 5(4-5) Physical Damage",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Success",
            ),
            tier: Some(
                8,
            ),
            tags: [
                "Life",
            ],
            stats: [
                "Gain 6(4-6) Life per enemy killed",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
